fix langauges output when empty